sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:4: error: identifier expected but integer literal found.
  for (i in [0,len-2]) {
             ^AlgBubbleSort1:9: error: ']' expected but '}' found.
} 
^AlgBubbleSort1:4: error: type application is not allowed in pattern
  for (i in [0,len-2]) {
         ^